[package]
name = "course_g"
version = "0.1.0"
authors = ["Perestoronin Pavel <pavel.perestoronin@qoollo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
lazy_static = "^0"
cairo = "^0"
approx = "^0"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
