[package]
name = "course_g"
version = "0.1.0"
authors = ["Perestoronin Pavel <pavel.perestoronin@qoollo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
lazy_static = "^0"
cairo = "^0"
approx = "^0"
log = "^0"
env_logger = "^0"
termion = "^1"
itertools = "^0"
gtk = { version = "0.9.0", features = ["v3_16"] }
gio = { version = "", features = ["v2_44"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_yaml = "^0"
